fix: search bar alignment

--- a/src/styles/partials/_landingHeader.scss
+++ b/src/styles/partials/_landingHeader.scss
@@ -68,6 +68,7 @@
   &search {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-top: 1.25rem;
     width: 70%;
     border-radius: 0.25rem;
